Fix powershell command

--- a/Parquet.ipynb
+++ b/Parquet.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1135e670",
+   "id": "449528c1",
    "metadata": {},
    "source": [
     "## Why should you care\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "534c87bd",
+   "id": "219ec3a3",
    "metadata": {},
    "source": [
     "## What Exactly is meant by `Columnar`"
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c987e54",
+   "id": "ccb602f7",
    "metadata": {},
    "source": [
     "### Thought example\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "465b5f0f",
+   "id": "22a986d5",
    "metadata": {},
    "source": [
     "## Key Features\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85faf39d",
+   "id": "23d95495",
    "metadata": {},
    "source": [
     "## Code Example\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "001b2c29",
+   "id": "d1ce230c",
    "metadata": {},
    "source": [
     "### Example Query"
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6a52c99e",
+   "id": "4693e499",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6c938fb",
+   "id": "8750c988",
    "metadata": {},
    "source": [
     "---\n",
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "409a0da8",
+   "id": "cffaf70a",
    "metadata": {},
    "source": [
     "## How it works\n",
@@ -362,7 +362,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "55cd78ed",
+   "id": "ba29915a",
    "metadata": {},
    "source": [
     "### Row Groups\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ed1526f",
+   "id": "cfbf7b6b",
    "metadata": {},
    "source": [
     "### Column Chunk\n",
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "739b0910",
+   "id": "8ee278dd",
    "metadata": {},
    "source": [
     "### Page \n",
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb1e475",
+   "id": "8f9deb72",
    "metadata": {},
    "source": [
     "## Metadata\n",
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a609a94",
+   "id": "80c32fc2",
    "metadata": {},
    "source": [
     "## Query Example\n",
@@ -451,7 +451,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "93791a14",
+   "id": "bc445358",
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)\n",
@@ -520,14 +520,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "4807d339",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Format-Hex : The process cannot access the file 'G:\\code\\machine-learning\\parquet_example\\tiny.parquet' because it is being used by another process.\n",
+      "At line:1 char:1\n",
+      "+ Format-Hex .\\tiny.parquet\n",
+      "+ ~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "    + CategoryInfo          : ReadError: (G:\\code\\machine...le\\tiny.parquet:String) [Format-Hex], IOException\n",
+      "    + FullyQualifiedErrorId : FormatHexFileAccessError,Format-Hex\n",
+      " \n"
+     ]
+    }
+   ],
    "source": [
-    "!Powershell \"Format-Hex .\\tiny.parquet\""
+    "!Powershell -noprofile \"Format-Hex .\\tiny.parquet\""
    ]
   },
   {
@@ -594,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "235de63a",
+   "id": "0d5089fd",
    "metadata": {},
    "source": [
     "## Look at the Metadata with Python"
@@ -603,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "776f7b53",
+   "id": "3405997b",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "705c73e4",
+   "id": "6d5d0b16",
    "metadata": {
     "scrolled": false
    },
@@ -735,14 +749,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee36ceeb",
+   "id": "495e0447",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a682f196",
+   "id": "1781f18c",
    "metadata": {},
    "source": [
     "## Best Practices\n",
@@ -755,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeda9b4c",
+   "id": "bf4e7c09",
    "metadata": {},
    "source": [
     "## Options\n",
@@ -769,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12041eb5",
+   "id": "d6d9b96b",
    "metadata": {},
    "outputs": [],
    "source": []
